<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.centricular.gstclockbouncer.GstNetClientClockSimActivity">

    <EditText
        android:id="@+id/sim_bouncer_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="0123456789."
        android:hint="@string/bouncer_addr"/>

    <EditText
        android:id="@+id/sim_bouncer_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/bouncer_port"
        android:text="@string/default_bouncer_port"/>

    <EditText
        android:id="@+id/sim_provider_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/provider_port"
        android:text="@string/default_provider_port"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/sim_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:enabled="true"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/sim_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>
